--- a/ClearBank.DeveloperTest.Tests/ClearBank.DeveloperTest.Tests.csproj
+++ b/ClearBank.DeveloperTest.Tests/ClearBank.DeveloperTest.Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="FluentValidation" Version="11.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
   </ItemGroup>
